Start deferred rendering. Added GBuffer class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set (SOURCES
   src/Main.cpp
   src/AbstractShader.cpp
   src/FragmentShader.cpp
+  src/GBuffer.cpp
   src/VertexShader.cpp
   src/ShaderProgram.cpp
   src/SubMesh.cpp
