Add axis aligned bounding box class and use for sub/meshes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ cmake_minimum_required (VERSION 2.8)
 add_definitions(-O2 -msse2)
 # add sources
 set (SOURCES
+  src/AxisAlignedBoundingBox.cpp
   src/Camera.cpp
   src/Cube.cpp
   src/DirectionalLight.cpp
