Add a sphere class to be used for culling.
Move things around a bit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set (SOURCES
   src/Program.cpp
   src/Renderer.cpp
   src/Shader.cpp
+  src/Sphere.cpp
   src/SpotLight.cpp
   src/SubMesh.cpp
   src/Texture.cpp
