Move assimp importer into its own class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories (${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_
 add_definitions(-O2 -msse2 -Wall -std=c++11)
 # add sources
 set (SOURCES
+  src/AssimpImporter.cpp
   src/Camera.cpp
   src/DirectionalLight.cpp
   src/Instance.cpp
