--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ project (SimpleGL)
 # set cmake minimum cmake version
 cmake_minimum_required (VERSION 2.8)
 # add subdirectories
-add_subdirectory(src)
-add_subdirectory(test)
+add_subdirectory(lib)
+add_subdirectory(viewer)
