--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,7 +2,7 @@ project (SimpleGL)
 # set cmake minimum cmake version
 cmake_minimum_required (VERSION 2.8)
 # extra definitions
-add_definitions(-Wall -O2 -msse2 -std=c++11)
+add_definitions(-Wall -std=c++11 -O2 -msse2)
 # add sources
 set (SOURCES
   Animation.cpp
