Move compiler flags to the upper level for easier changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 project (SimpleGL)
 # set cmake minimum cmake version
 cmake_minimum_required (VERSION 2.8)
+# extra definitions
+add_definitions(-Wall -std=c++11 -O2 -msse2)
 # add subdirectories
 add_subdirectory(lib)
 add_subdirectory(editor)
