Make more proper use of cmake.

--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -1,37 +1,49 @@
-project (SimpleGL-Editor)
-# set cmake minimum cmake version
-cmake_minimum_required (VERSION 2.8)
-# find qt
-find_package (Qt4 REQUIRED)
-# use qt opengl module
-set (QT_USE_QTOPENGL TRUE)
-# include qt use file
-include (${QT_USE_FILE})
-# include additional directories  needed for moc files etc.
-include_directories (../lib ${CMAKE_SOURCE_DIR}/editor/src ${CMAKE_BINARY_DIR} ${CMAKE_BINARY_DIR}/editor)
-# set lib directories to contain build_directory/lib
-link_directories (${CMAKE_BINARY_DIR}/lib)
-# add sources
-set (SOURCES
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)
+
+PROJECT(SimpleGL_Editor)
+
+ADD_DEFINITIONS(-Wall -std=c++11 -O2 -g)
+
+# Qt
+FIND_PACKAGE(Qt4 REQUIRED)
+IF(QT_FOUND)
+  SET(QT_USE_QTOPENGL TRUE)
+  INCLUDE(${QT_USE_FILE})
+  INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/editor)
+ELSE()
+  MESSAGE(FATAL_ERROR "Qt not found! Please make sure Qt is installed.")
+ENDIF(QT_FOUND)
+
+# Assimp
+FIND_PACKAGE(Assimp REQUIRED)
+IF(Assimp_FOUND)
+  INCLUDE_DIRECTORIES(${Assimp_INCLUDE_DIR})
+ELSE()
+  MESSAGE(FATAL_ERROR "Assimp not found! Please make sure Assimp is installed and Assimp_DIR is set correctly.")
+ENDIF(Assimp_FOUND)
+
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib ${CMAKE_SOURCE_DIR}/editor/src)
+LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
+
+SET(SOURCES
   src/AssimpImporter.cpp
-  src/FbxImporter.cpp
   src/GLWidget.cpp
   src/Main.cpp
   src/MainWindow.cpp
 )
-# add ui files
-qt4_wrap_ui (UI_SOURCES
+
+QT4_WRAP_UI(UI_SOURCES
   src/MainWindow.ui
 )
-# add headers
-qt4_wrap_cpp (MOC_SOURCES
+
+QT4_WRAP_CPP(MOC_SOURCES
   src/GLWidget.h
   src/MainWindow.h
 )
-# add resources
-qt4_add_resources (RESOURCES
+
+QT4_ADD_RESOURCES(RESOURCES
   resources.qrc
 )
-# opengl target
-add_executable (SimpleGL-Editor WIN32 ${SOURCES} ${MOC_SOURCES} ${UI_SOURCES} ${RESOURCES} resources.rc)
-target_link_libraries (SimpleGL-Editor SimpleGL ${QT_LIBRARIES} assimp "/usr/lib/gcc4/x64/libfbxsdk-2013.2.so")
+
+ADD_EXECUTABLE(SimpleGL-Editor WIN32 ${SOURCES} ${MOC_SOURCES} ${UI_SOURCES} ${RESOURCES} resources.rc)
+TARGET_LINK_LIBRARIES(SimpleGL-Editor SimpleGL ${QT_LIBRARIES} ${ASSIMP_LIBRARIES})
